# capestone

./: .dockerignore  .env.example  .gitignore  .mcp.json  Dockerfile  Dockerfile.streamlit  README.md  TEST_SCENARIOS.md  alembic.ini  docker-compose.yml  mcp_server.py  pyproject.toml  streamlit_app.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_transfers_negotiation.py  0003_refresh_compatibility.py
app/: main.py
app/agents/: demand_agent.py  graph.py  ml_agent.py  rag_agent.py  seller_agent.py  sql_agent.py
app/core/: config.py  security.py  tracing.py
app/db/: database.py  models.py
app/guardrails/: validators.py
app/rag/: ingest.py  retriever.py
app/routes/: admin.py  ask.py  auth.py  billing.py  demand.py  ml.py  sql.py  transfer.py
app/services/: __init__.py  workflow_service.py
app/tools/: demand_tools.py  inventory_tools.py  rag_tools.py  transfer_tools.py
data/: retailflow.db
data/faiss_index/: index.faiss  index.pkl
data/pdfs/: market_guidelines.txt  pricing_rules.txt  seller_catalogue.txt
scripts/: entrypoint.sh  generate_report.py  init_db.py  init_rag.py  run_tests.py  seed_db.py  seed_test_data.py
tests/: test_kirananet.py
